<resources>
    <string name="app_name">Robusta Roasting</string>
    <string name="app_description">Robusta Coffee Bean Roast Detection</string>
    <string name="card_scan_coffee_bean">ROAST DETECTION</string>
    <string name="title_menu">Menu</string>
    <string name="menu_coffee_name">Robusta</string>
    <string name="menu_roasting">Roasting</string>
    <string name="menu_app_info">App Info</string>
    <string name="menu_settings">Settings</string>
    <string name="title_coffee_bean">Robusta Coffee Bean</string>
    <string name="coffee_bean_light">Light Roast</string>
    <string name="coffee_bean_medium">Medium Roast</string>
    <string name="coffee_bean_dark">Dark Roast</string>
    <string name="toolbar_detection">Roast Detection</string>
    <string name="title_method">Object Detection</string>
    <string name="method_camera">Camera</string>
    <string name="method_gallery">Gallery</string>
    <string name="button_upload">Upload photo</string>
    <string name="button_detail_result">Detail Result</string>
    <string name="title_light">Light</string>
    <string name="title_medium">Medium</string>
    <string name="title_dark">Dark</string>
    <string name="description_result_light">Based on the detection results, the image has an Agtron scale of 96 – 75 and is included in the Light Profile</string>
    <string name="description_result_medium">Based on the detection results, the image has an Agtron scale of 65 – 55 and is included in the Medium Profile</string>
    <string name="description_result_dark">Based on the detection results, the image has an Agtron scale of 45 – 25 and is included in the Dark Profile</string>
    <string name="toolbar_detail_coffee">Detail Coffee</string>
    <string name="tools_coffee">Robusta Coffee</string>
    <string name="tools_coffee_description">Robusta coffee, known scientifically as Coffea canephora, is one of the two main species of coffee beans that dominate the global coffee market, the other being Arabica (Coffea arabica). Robusta coffee is renowned for its tough nature, strong flavor profile, and extraordinary adaptability to a wide range of growing conditions. Robusta coffee has advantages in terms of characteristics, namely being resistant to disease attacks, having the strongest aroma and taste among other types of coffee. Robusta coffee beans are widely used as raw material for ready-to-drink coffee, blends for blended coffee and are also used to make milk-based coffee drinks such as cappuccino, cafe latte and macchiato.</string>
    <string name="title_menu_1">Roasting Robusta Coffee Bean</string>
    <string name="title_menu_2">Function and Purpose of Roasting</string>
    <string name="title_menu_3">Coffee Bean Roasting Process</string>
    <string name="title_menu_4">Agtron Scale</string>
    <string name="desc_menu_1">The roasting process is the process of forming taste and aroma in coffee beans. If we compare the ratio of coffee taste determinants, 30% of coffee taste is determined through the roasting process, 60% is determined by the cultivation process and harvest in the garden and 10% is determined by the barista when serving.</string>
    <string name="desc_menu_2">
        \n1. To find characteristics of each coffee bean.
        \n2. Eliminates the negative properties of coffee beans.
        \n3. To get a more optimal coffee flavor profile.
        \n4. Reducing remaining carbon dioxide levels</string>
    <string name="desc_menu_3">Roast the green beans until the roast gradually changes color, from green to yellow, then brownish yellow, then light brown, dark brown, blackish brown, until finally it turns black. Feel the change in the aroma of the coffee beans with every minute of the roasting process and make sure there are two explosions, namely the first (first crack) and the second explosion (rash).</string>
    <string name="desc_menu_4">Agtron is an industry standard measurement system used to assess the level of maturity of coffee beans based on the color and surface reflectance of the roasted coffee beans. The agtron number consists of a scale of 0 – 100.</string>
    <string name="toolbar_about_app">About Application</string>
    <string name="tools_app_description">This application is the result of technology development specifically designed to measure and detect the maturity level of Robusta coffee beans. This application allows coffee roasters to know the maturity level of roasted coffee beans in real-time. This is done by detecting object images which are integrated into a Convolutional Neural Network (CNN) model to determine the roast profile (light, medium, dark). In this application, users can also see additional information regarding Robusta coffee roast profile data and Robusta coffee beans.</string>
    <string name="toolbar_settings">Settings</string>
    <string name="tools_language">Change Language</string>
    <string name="tools_permission">Set App Permission</string>
    <string name="tools_copyright">\u00A9 Copyright</string>
    <string name="tools_university">Jambi University</string>
    <string name="toolbar_detail_roast">Detail Roast</string>
    <string name="tools_roast">Roast</string>
    <string name="Temperature">Temperature</string>
    <string name="Color">Color</string>
    <string name="Aroma">Aroma</string>
    <string name="Flavour">Flavour</string>
    <string name="button_process">Roasting Process</string>
    <string name="pop_up_light_title">Light Profile Roast</string>
    <string name="pop_up_medium_title">Medium Profile Roast</string>
    <string name="pop_up_dark_title">Dark Profile Roast</string>
    <string name="light_description">At this type of roasting level, there are several roasting names that are popularly called, namely Light City, Half City, Cinnamon Roast and New England Roast.</string>
    <string name="light_temperature">180°C to 205°C</string>
    <string name="light_agtron">96 – 75 Agtron</string>
    <string name="light_color">Lightly roasted robusta coffee beans exhibit a pale, straw-like color with a hint of light brown. They maintain a dry appearance, and their surface might show slight unevenness in color, with areas of pale tan and subtle yellow undertones. The beans still retain much of their original moisture content, and there\'s minimal presence of oils on the surface. The overall impression is one of brightness and crispness, indicating a roast that preserves the bean\'s intrinsic flavors and acidity.</string>
    <string name="light_flavour">Light roast robusta coffee beans offer a delicate and nuanced experience. The inherent flavors of the beans shine through, showcasing vibrant acidity and lively, fruity or floral notes. The taste is often bright and crisp, with a noticeable tartness that might remind you of citrus or berries. Undertones of toasted grains, nuts, and subtle earthiness can also be detected. The overall impression is one of subtlety, highlighting the unique characteristics of the bean\'s origin.</string>
    <string name="light_aroma">Light roast robusta coffee beans offer a fragrant and delicate aroma. The scent is often vibrant and lively, with prominent floral and fruity notes that evoke images of fresh blossoms and ripe berries. The aroma might also carry a hint of toasted grains or nuts, adding depth to the sensory experience. There\'s a sense of brightness and clarity in the aroma, reflecting the bean\'s origin and preserving the natural essences of the coffee.</string>
    <string name="light_process_roasting">The roasting temperature for light Robusta coffee ranges from 195°C to 205°C. Roasting time is also shorter, around 10 to 12 minutes. By carefully controlling temperature and time, Robusta coffee beans can be roasted more gently thereby maintaining their brighter acid characteristics and fresh fruity aromas and flavors, resulting in the desired light profile.</string>
    <string name="light_coffee">
        1. Pour-Over Coffee
        \n2. Single-Origin Espresso
        \n3. AeroPress Coffee
        \n4. Cold Brew
        \n5. Iced Coffee
        \n6. Pour-over with Fruit Infusions
        \n7. Coffee Lemonade
        \n8. Single-Origin Drip Coffee
        \n9/ Cascara Infusion
    </string>
    <string name="medium_description">At this type of roasting level, there are several popular roasting names, namely Regular Roast, American Roast, City Roast and Breakfast Roast.</string>
    <string name="medium_temperature">210°C to 220°C</string>
    <string name="medium_agtron">65 – 55 Agtron</string>
    <string name="medium_color">Moving into the medium roast territory, robusta coffee beans take on a deeper shade of brown, resembling that of rich cocoa or a warm walnut hue. The beans become smoother in texture as oils begin to emerge and spread across their surface. These oils give the beans a slight glossiness, reflecting the light in a gentle manner. The beans might display some small surface cracks, and their overall appearance suggests a harmonious blend between the bean\'s original attributes and the flavors imparted by the roasting process.</string>
    <string name="medium_flavour">Medium roast robusta coffee beans strike a balance between the original flavors of the bean and the transformative effects of roasting. You can expect a smoother and more rounded flavor profile compared to lighter roasts. The acidity becomes more subdued, giving way to a pleasant blend of caramelized sweetness and a moderate body. The nutty undertones become more pronounced, often accompanied by hints of chocolate, cocoa, and possibly even a touch of spiciness. The result is a harmonious cup with a satisfying depth and complexity.</string>
    <string name="medium_aroma">Medium roast robusta coffee beans showcase a well-rounded and inviting aroma. The scent becomes warmer and richer, with the emergence of caramelized sweetness. You might detect notes of brown sugar, toffee, or even a touch of honey. The aroma is often accompanied by the comforting presence of roasted nuts, providing a sense of depth and complexity. A subtle undertone of cocoa or chocolate can also be present, contributing to the inviting nature of the cup.</string>
    <string name="medium_process_roasting">The roasting temperature ranges from 205°C to 215°C, and the roasting time can take around 12 to 14 minutes. In this medium profile, Robusta coffee beans will display more balanced flavor characteristics between acidity and deeper flavors, with hints of chocolate and caramel. This creates a Robusta coffee with a stronger flavor than the light profile, but lacks the comfort of the dark profile.</string>
    <string name="medium_coffee">
        1. Drip Coffee
        \n2. Cappuccino
        \n3. Latte
        \n4. Flat White
        \n5. Americano
        \n6. Pour-Over Coffee
        \n7. Espresso-Based Drinks (e.g., Macchiato, Mocha)
        \n8. French Press Coffee
        \n9/ Affogato
    </string>
    <string name="dark_description">At this type of roasting level, there are several popular roasting names, namely French Roast, Italian Roast, Espresso Roast, Continental Roast, New Orleans Roast, and Spanish Roast.</string>
    <string name="dark_temperature">225°C to 230°C</string>
    <string name="dark_agtron">45 – 25 Agtron</string>
    <string name="tools_description">Description</string>
    <string name="tools_close">Close</string>
    <string name="tools_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
</resources>